--- a/frontend/src/components/StationRow/StationRow.scss
+++ b/frontend/src/components/StationRow/StationRow.scss
@@ -1,18 +1,13 @@
 .station-row {
   padding: 20px 0 20px 40px;
   cursor: pointer;
-
-  &:nth-child(even) {
-    background: #f9f9f9;
-  }
+  background: #f9f9f9;
 
   &:hover {
     background: #eaeaea;
   }
 
   &__title {
-    margin: 0 20px;
-
     span {
       font-size: 0.8em;
     }
@@ -22,5 +17,23 @@
     width: 15px;
     height: 15px;
     border-radius: 50%;
+  }
+
+  &__bed {
+    td {
+      padding: 8px 0;
+      border-bottom: 1px solid #eaeaea;
+    }
+
+    &.--occupied {
+      background: #ff6b81;
+    }
+
+    &.--free {
+      background: #7bed9f;
+    }
+  }
+
+  &.--expanded {
   }
 }
