Update bed view

--- a/frontend/src/components/WardBedManagmentTbl/WardBedManagementTbl.scss
+++ b/frontend/src/components/WardBedManagmentTbl/WardBedManagementTbl.scss
@@ -1,7 +1,7 @@
-.occupied{
-  background-color: red;
+.occupied {
+  background-color: lightcoral !important;
 }
 
 .free {
-  background-color:green;
+  background-color:lightgreen !important;
 }
