--- a/frontend/src/components/ListView/ListView.scss
+++ b/frontend/src/components/ListView/ListView.scss
@@ -8,6 +8,10 @@
       text-align: left;
     }
 
+    td {
+      border: 1px solid #c8c8c8;
+    }
+
     th:first-of-type {
       width: 50px;
     }
