WIP Update ListView
* Prepare for Link Parameters

--- a/frontend/src/components/StationRow/StationRow.scss
+++ b/frontend/src/components/StationRow/StationRow.scss
@@ -2,6 +2,17 @@
   padding: 20px 0 20px 40px;
   background: #f9f9f9;
 
+  &:last-of-type td {
+    border-bottom: 0;
+  }
+
+  td {
+    padding: 0.429em 0.857em;
+    &:first-of-type {
+      width: 49px;
+    }
+  }
+
   &__title {
     span {
       font-size: 0.8em;
@@ -12,5 +23,6 @@
     width: 15px;
     height: 15px;
     border-radius: 50%;
+    margin: 0 auto;
   }
 }
