--- a/frontend/src/components/ListView/ListView.scss
+++ b/frontend/src/components/ListView/ListView.scss
@@ -3,6 +3,12 @@
     margin: 15px 0;
   }
 
+  &__table {
+    tr:not(.p-datatable-row) td[colspan] {
+      padding: 0;
+    }
+  }
+
   &__station-table {
     thead {
       text-align: left;
@@ -10,6 +16,20 @@
 
     td {
       border: 1px solid #c8c8c8;
+      border-top: 0;
+
+      &:first-of-type {
+        border-left: 0;
+        border-right: 0;
+      }
+
+      &:nth-of-type(2) {
+        border-left: 0;
+      }
+
+      &:last-of-type {
+        border-right: 0;
+      }
     }
 
     th:first-of-type {
