--- a/frontend/src/components/LoginForm/LoginForm.scss
+++ b/frontend/src/components/LoginForm/LoginForm.scss
@@ -2,3 +2,17 @@
     float: left;
     margin-right: 10px;
 }
+
+.login_headline{
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.login_box{
+    width:400px;
+    margin-top: 30px;
+    //margin-left: 30px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 5px 20px 50px 20px;
+}
