--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  padding-bottom: 30px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
